Changelog
=========

1.0 (unreleased)
----------------

- changed story view [gborelli]
- refactored timing_status method [gborelli]
- added macros for assignees, timings and epic [gborelli]
- normalized timings dict [gborelli]
- allowed discussion for story [gborelli]
- added collective.js.jqueryui [gborelli]
- changed style for comments in iteration view [gborelli]
- added static resources (javascript and css) [gborelli]
- changed Project and Iteration view [gborelli]
- added conversation_view to ISTory to display comments [gborelli]
- added IStoriesListing adapter to list iteration's stories [gborelli]
- added abstract.z3cform.usertokeninput dependency [gborelli]
- added browser layer [gborelli]
- added get_assignees_details in utils method in order to reuse it [gborelli]
- added vocabularies for status, env_type and roles [gborelli]
- create package structure and content types