@@ -1,4 +1,5 @@
 #project-view {margin-top: 1em}
+
 #project-iterations h2 {
   padding: .1em 0 .1em 1em;
   font-size: 120%;
@@ -9,6 +10,75 @@
 
 .pane {
   padding: 1em;
+}
+
+#overview .panes {
+  clear: both;
+  height: 220px;
+  overflow: hidden;
+}
+
+#overview .panes > div {
+  border-color: #C8CACA;
+  border-style: solid;
+  border-width: 0 1px 1px;
+  display: none;
+  height: 180px;
+  padding: 15px 20px;
+  overflow-y: auto;
+}
+
+
+#overview ul.tabs li {
+    float: left;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+#overview ul.tabs a:hover {
+  color: black !important;
+}
+
+#overview ul.tabs a {
+    background-color: #EEEEEE;
+    border: 1px solid #C8CACA;
+    border-width: 1px 1px 0;
+    color: #777777;
+    display: block;
+    float: left;
+    font-size: 13px;
+    height: 18px;
+    margin-right: 2px;
+    outline: 0 none;
+    padding: 5px 30px;
+    position: relative;
+    text-decoration: none;
+    top: 1px;
+}
+
+#overview ul.tabs a.current {
+    border-bottom: 1px solid white;
+    background-color: white;
+    color: #000000;
+    cursor: default;
+}
+
+#overview ul.tabs {
+    border-bottom: 1px solid #C8CACA;
+    height: 30px;
+    margin: 0 !important;
+    padding: 0;
+}
+
+
+#overview {
+  margin: 1em 0;
+}
+
+.project-details {
+  float: left;
+  width: 49%;
 }
 
 #iteration-dates {
