@@ -1,0 +1,85 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      lang="en"
+      i18n:domain="abstract.simplemanagement">
+
+  <div id="overview" class="clearfix">
+    <ul class="tabs">
+      <li><a href="#" i18n:translate="">Overview</a></li>
+      <li><a href="#" i18n:translate="">Extra details</a></li>
+      <li><a href="#" i18n:translate="">Notes</a></li>
+    </ul>
+    <div class="panes">
+      <div class="pane">
+        <div class="project-details">
+          <dl>
+            <dt i18n:translate="">Start date</dt>
+            <dd tal:condition="context/prj_start_date"
+              tal:content="python:context.toLocalizedTime(context.prj_start_date.isoformat())"></dd>
+            <dt i18n:translate="">Expected end date</dt>
+            <dd><span tal:condition="context/prj_expected_end_date"
+              tal:replace="python:context.toLocalizedTime(context.prj_expected_end_date.isoformat())" /></dd>
+            <dt i18n:translate="">End Date</dt>
+            <dd tal:condition="context/prj_end_date"
+              tal:content="python:context.toLocalizedTime(context.prj_end_date.isoformat())">
+            </dd>
+          </dl>
+        </div>
+
+        <div class="project-details">
+          <dl>
+            <dt i18n:translate="budget_label">Budget <small>as is by offer</small></dt>
+            <dd i18n:translate=""><span i18n:name="budget" tal:content="context/budget"></span> man days</dd>
+            <dt i18n:translate="estimate_label">
+              Estimate
+              <small>at the beginning, by the project manager</small>
+            </dt>
+            <dd i18n:translate="">
+              <span i18n:name="initial_estimate" tal:content="context/initial_estimate"></span>
+              man days
+            </dd>
+          </dl>
+        </div>
+      </div>
+
+      <div class="pane">
+        <div class="project-details">
+          <dl>
+            <dt i18n:translate="">Customer</dt>
+            <dd tal:content="context/customer"></dd>
+            <dt i18n:translate="">Operatives</dt>
+            <dd>
+              <ul>
+                <li tal:repeat="operative view/operatives">
+                  <span><a tal:attributes="href operative/user/href"
+                    tal:content="operative/user/fullname" /></span>
+                  (<em tal:content="operative/role"></em>)
+                </li>
+              </ul>
+            </dd>
+          </dl>
+        </div>
+        <div class="project-details">
+          <dl>
+            <dt i18n:translate="">Project classifiers</dt>
+            <dd>
+              <ul id="classifiers">
+                <li tal:repeat="item context/classifiers">
+                  <span tal:replace="item"/>
+                </li>
+              </ul>
+            </dd>
+          <dl>
+        </div>
+      </div>
+
+
+      <div id="project-notes" class="pane">
+        <div tal:content="structure context/notes"></div>
+      </div>
+    </div>
+  </div>
+
+</html>
