@@ -4,6 +4,7 @@ Changelog
 1.0 (unreleased)
 ----------------
 
+- added project overview view [gborelli]
 - changed story view [gborelli]
 - refactored timing_status method [gborelli]
 - added macros for assignees, timings and epic [gborelli]
